--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
-    "socket.io": "^3.1.0"
+    "socket.io": "^3.1.0",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
